custom-elements: Element with a valid custom element name created by createElement(name, options) should be upgraded

createElement('my-foo', {}) was not upgraded even though
createElement('my-foo') is upgraded. Document::CreateElement() should
set "undefined" state even if the local name is valid for Custom Element
V0.

Bug: 810289
Change-Id: If70c40d6de520fe79b73e7fb6b21d776e636fee9
Reviewed-on: https://chromium-review.googlesource.com/907912
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535627}
Former-commit-id: db2a27ac69114ede5b7afdf77174a4bf2be2adf1