third_party/WebKit/Source/core/dom/Document.cpp
@@ -1086,26 +1086,25 @@ Element* Document::CreateElement(const QualifiedName& q_name,
       definition = registry->DefinitionFor(desc);
   }
 
-  // 5. Let element be the result of creating an element
-  Element* element;
+  if (definition)
+    return definition->CreateElement(*this, q_name, flags);
 
-  if (definition) {
-    element = definition->CreateElement(*this, q_name, flags);
-  } else if (V0CustomElement::IsValidName(q_name.LocalName()) &&
-             RegistrationContext()) {
+  Element* element;
+  if (V0CustomElement::IsValidName(q_name.LocalName()) &&
+      RegistrationContext()) {
     element = RegistrationContext()->CreateCustomTagElement(*this, q_name);
   } else {
     element = CreateRawElement(q_name, flags);
-    // 7.3. If namespace is the HTML namespace, and either localName is
-    // a valid custom element name or is is non-null, then set result’s
-    // custom element state to "undefined".
-    if (q_name.NamespaceURI() == HTMLNames::xhtmlNamespaceURI &&
-        (CustomElement::IsValidName(q_name.LocalName()) || !is.IsEmpty()))
-      element->SetCustomElementState(CustomElementState::kUndefined);
-
     if (!is.IsEmpty() && flags.IsCustomElementsV0())
       V0CustomElementRegistrationContext::SetTypeExtension(element, is);
   }
+  // 7.3. If namespace is the HTML namespace, and either localName is a
+  // valid custom element name or is is non-null, then set result’s
+  // custom element state to "undefined".
+  if (q_name.NamespaceURI() == HTMLNames::xhtmlNamespaceURI &&
+      (CustomElement::IsValidName(q_name.LocalName()) || !is.IsEmpty()))
+    element->SetCustomElementState(CustomElementState::kUndefined);
+
   return element;
 }
 
